--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="container" style="color: var(--color-body-text); background-color: var(--color-primary-bg);">
     <h1 style="color: var(--color-primary-text);">Список статей</h1>
-    {% for post in posts %}
-    {% include '_post.html' %}
+    {% for post_detail in posts %}
+    {% include '_card.html' %}
     {% endfor %}
     <nav aria-label="Навигация">
         <ul class="pagination">
